# StructCheck-RL

./: .dockerignore  .gitignore  Construction_status_label.xlsx  Construction_status_label_v2.xlsx  Data use  Dockerfile  L3-5d.ifc  RESULTS.md  pyproject.toml  readme.md  requirements.txt
case1/: cloud.ply  meta.json
case1/2025-02-10/: bim_projection_contours.json  point_cloud_summary.json
case1/2025-03-17/: bim_projection_contours.json  point_cloud_summary.json
demo/: train.py
docker/wheels/: README.txt
docs/: DATA_CONSTRUCTION_GUIDE.md
scripts/slurm/: README.md  SITE_POLICY.txt  eval_adapter_1gpu_test_s.sbatch  submit_test_s_sft.sh  train_structcheck_sft_1node_8gpu_nogres.sbatch
src/structcheck/: __init__.py  text_truncation.py
src/structcheck/data/: __init__.py  formatting.py  mine_eval_errors.py  validate_jsonl.py
src/structcheck/eval/: __init__.py  evaluate_predictions.py  run_inference.py
src/structcheck/train/: __init__.py  compat.py  sft_train.py
tools/: diff_freeze_vs_lock.py  extract_sqsh_requirements_lock.py
